--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    justify-content: center;  
     }
   .chessBoard {
-    width:80vw;
-    height: 80vw;
+    width:70vw;
+    height: 70vw;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -58,15 +58,112 @@ body {
     height: auto;
   }
   
+  #alert {
+    position: fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    color:rgb(0, 176, 67);
+    width:44vw;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+    font-size:xxx-large;
+    font-weight: bold;
+    z-index: 1000;
+    display: none;
+  
+  }
+      
   
   @media (min-width:600px) {
     .chessBoard {
-        width:600px;
-        height: 600px;
+        width:500px;
+        height: 500px;
     }
   }
   @media (max-width:600px) {
     .coordinate {
       font-size: 8px;
+    }
+  }
+  
+  .promotionOption{
+    border-radius: 50%;
+    background-color: darkgray;
+    transition: transform 0.2s;
+    position: absolute;
+    z-index: 1000;
+  }
+  .promotionOption:hover {
+    cursor: pointer;
+    border-radius: 0%;
+    background-color:#539B0C;
+    width: 100%;
+  }
+  .promotionOption img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+  }
+  
+  .container {
+    display: flex;
+  }
+  #evalBar {
+    background-color: rgb(255,255,255);
+    width: 5%;
+    height: 70vw;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 3px;
+  }
+  
+  #evalBar::after{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 5px rgba(0,0,0,0.7) inset;
+    border-radius: 3px;
+  }
+  #evalBar .blackBar {
+    width: 100%;
+    height: 35%;
+    background-color: #666;
+    transition: height 1s;
+    position: absolute;
+    top: 0;
+    border-radius: 3px;
+  }
+  .zero {
+    width: 100%;
+    opacity: 1;
+    border-bottom: 7px solid rgba(214,79,0,0.4);
+    position: absolute;
+    top: 0;
+    height: 50%;
+  }
+  .evalNum {
+    width: 100%;
+    opacity: 1;
+    position: absolute;
+    top:95%;
+    height: 50%;
+    font-size: 0.5rem;
+    font-weight: bolder;
+    text-align: center;
+    color:#d18232;
+  }
+  
+  @media (min-width:600px) {
+    #evalBar {
+      height: 500px;
     }
   }
